force-app/main/default/objects/Web_Form__c/Web_Form__c.object-meta.xml
<CustomObject>
    <label>Web Form</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>