force-app/main/default/objects/Web_Form__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>