force-app/main/default/objects/Web_Form__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose a folder this web form belongs to.</inlineHelpText>
    <label>Folder</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The folder in which you place a web form needs to be of type &#39;WebForm&#39;</errorMessage>
        <filterItems>
            <field>CMSFolder__c.Type__c</field>
            <operation>equals</operation>
            <value>WebForm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CMSFolder__c</referenceTo>
    <relationshipLabel>Web Forms</relationshipLabel>
    <relationshipName>Web_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>