force-app/main/default/objects/Web_Form__c/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <description>The label of the object which fields will be filled by this form.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The label of the object which fields will be filled by this form.</inlineHelpText>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>