force-app/main/default/objects/Web_Form__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>The API name of the object which fields will be filled by this form.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the object which fields will be filled by this form.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>