force-app/main/default/objects/Web_Form__c/fields/Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_URL__c</fullName>
    <description>URL the user will go to after saving the form.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL the user will be redirected to after saving the form.</inlineHelpText>
    <label>Return URL</label>
    <type>Url</type>
</CustomField>