force-app/main/default/objects/Web_Form__c/fields/Save_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Save_Button_Text__c</fullName>
    <defaultValue>&quot;Save&quot;</defaultValue>
    <description>The text that will appear on the form&#39;s save button.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The text that will appear on the form&#39;s save button.</inlineHelpText>
    <label>Save Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>