force-app/main/default/objects/Web_Form__c/fields/SavedByWebformeditor__c.field-meta.xml
<CustomField>
    <fullName>SavedByWebformeditor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is internal to the app and is used to track if people didn&#39;t forget to override the edit and new buttons on the webform object. Only the webform editor will set this flag.</description>
    <label>SavedByWebformeditor</label>
    <type>Checkbox</type>
</CustomField>