force-app/main/default/objects/Web_Form__c/fields/Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Text_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Color</label>
    <length>15</length>
    <type>Text</type>
</CustomField>