force-app/main/default/objects/Web_Form__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the form.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The title that will appear on the form. This can be left blank.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>