force-app/main/default/objects/Web_Form__c/fields/Web_Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Form ID</label>
    <type>Text</type>
</CustomField>