force-app/main/default/objects/Web_Form__c/validationRules/Web_Form_folder_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Web_Form_folder_can_not_be_empty</fullName>
    <active>true</active>
    <description>Web Form folder can not be empty</description>
    <errorConditionFormula>ISBLANK( Folder__c)</errorConditionFormula>
    <errorDisplayField>Folder__c</errorDisplayField>
    <errorMessage>Please select a folder.</errorMessage>
</ValidationRule>