force-app/main/default/objects/Web_Form__c/validationRules/Web_Form_Name_field_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Web_Form_Name_field_can_not_be_empty</fullName>
    <active>true</active>
    <description>This rule will fire if somebody fills in a web form without filling in the name field.</description>
    <errorConditionFormula>IF( ISNULL( Name ), true, false )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The &#39;Name&#39; field can not be empty.</errorMessage>
</ValidationRule>